[package]
name = "esl01-dag"
version = "0.1.0"
edition = "2018"
authors = ["Facebook Source Control Team <sourcecontrol-dev@fb.com>"]
license = "GPL-2.0-only"
description = "An implementation of a DAG used for source control."
repository = "https://github.com/facebookexperimental/eden"

[dependencies]
indexedlog = { package = "esl01-indexedlog", version = "0.1", path = "../indexedlog" }
minibytes = { package = "esl01-minibytes", version = "0.1", path = "../minibytes" }
vlqencoding = { package = "esl01-vlqencoding", version = "0.1", path = "../vlqencoding" }

anyhow = "1.0.20"
bitflags = "1"
byteorder = "1.2.7"
fs2 = "0.4.3"
indexmap = "1.0.1"
serde = { version = "1", features = ["derive"] }
tempfile = "3.0.7"

[dev-dependencies]
drawdag = { package = "esl01-drawdag", version = "0.1", path = "../drawdag" }
once_cell = "1"
quickcheck = "0.9"