[package]
name = "esl01-dag"
version = "0.2.0"
edition = "2018"
authors = ["Facebook Source Control Team <sourcecontrol-dev@fb.com>"]
license = "GPL-2.0-only"
description = "An implementation of a DAG used for source control."
repository = "https://github.com/facebookexperimental/eden"

[dependencies]
drawdag = { package = "esl01-drawdag", version = "0.1", path = "../drawdag" }
indexedlog = { package = "esl01-indexedlog", version = "0.1.1", path = "../indexedlog" }
minibytes = { package = "esl01-minibytes", version = "0.2", path = "../minibytes" }
vlqencoding = { package = "esl01-vlqencoding", version = "0.1", path = "../vlqencoding" }

anyhow = "1.0.20"
bitflags = "1"
byteorder = "1.2.7"
fs2 = "0.4.3"
indexmap = "1.0.1"
itertools = "0.8"
once_cell = "1"
parking_lot = "0.10"
serde = { version = "1", features = ["derive"] }
tempfile = "3.0.7"
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
quickcheck = "0.9"
unicode-width = "0.1.7"
