[package]
name = "esl01-dag"
version = "0.3.0"
edition = "2021"
authors = ["Facebook Source Control Team <sourcecontrol-dev@fb.com>"]
license = "MIT"
description = "An implementation of a DAG used for source control."
repository = "https://github.com/facebook/sapling"

[lib]
name = "dag"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bitflags = "1"
byteorder = "1"
dag-types = { version = "0.3.0", package = "esl01-dag-types", path = "../dag-types", default-features = false }
drawdag = { version = "0.3.0", package = "esl01-drawdag", path = "../drawdag" }
fail = { version = "0.4" }
fs2 = { version = "0.4", optional = true }
futures = { version = "0.3" }
indexedlog = { version = "0.3", package = "esl01-indexedlog", path = "../indexedlog", optional = true }
indexmap = "1"
mincode = { version = "0.3", package = "esl01-mincode", path = "../mincode" }
minibytes = { version = "0.3", package = "esl01-minibytes", path = "../minibytes", default-features = false }
nonblocking = { version = "0.3", package = "esl01-nonblocking", path = "../nonblocking" }
rand = "0.8"
renderdag = { version = "0.3", package = "esl01-renderdag",path = "../renderdag", optional = true }
serde = { version = "1", features = ["derive"] }
tempfile = { version = "3", optional = true }
thiserror = "1"
tracing = "0.1"
vlqencoding = { version = "0.3", package = "esl01-vlqencoding", path = "../vlqencoding" }

[dev-dependencies]
dev-logger = { version = "0.3", package = "esl01-dev-logger", path = "../dev-logger" }
fs2 = "0.4"
indexedlog = { version = "0.3", package = "esl01-indexedlog", path = "../indexedlog" }
once_cell = "1"
quickcheck = "1"
renderdag = { version = "0.3", package = "esl01-renderdag",path = "../renderdag" }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }

[features]
default = ["indexedlog-backend", "render"]
indexedlog-backend = ["fs2", "indexedlog", "tempfile"]
render = ["renderdag"]