[package]
name = "esl01-drawdag"
version = "0.3.0"
edition = "2021"
authors = ["Facebook Source Control Team <sourcecontrol-dev@fb.com>"]
license = "MIT"
description = "Parse an ASCII DAG into parent relations."
repository = "https://github.com/facebook/sapling"

[lib]
name = "drawdag"

[dependencies]
