[package]
name = "gitdag"
version = "0.1.0"
edition = "2018"
authors = ["Facebook Source Control Team <sourcecontrol-dev@fb.com>"]
license = "GPL-2.0-only"
description = "Git DAG used for source control."
repository = "https://github.com/facebookexperimental/eden"

[dependencies]
anyhow = "1"
dag = { package = "esl01-dag", version = "0.2", path = "../dag" }
git2 = "0.13"
tracing = "0.1"
