[package]
name = "esl01-hgtime"
version = "0.3.0"
edition = "2021"
authors = ["Facebook Source Control Team <sourcecontrol-dev@fb.com>"]
license = "GPL-2.0-only"
description = "Parse time from strings."
repository = "https://github.com/facebook/sapling"

[lib]
name = "hgtime"

[dependencies]
chrono = "0.4"
humantime = "2"
