[package]
name = "esl01-indexedlog"
version = "0.1.0"
edition = "2018"
authors = ["Facebook Source Control Team <sourcecontrol-dev@fb.com>"]
license = "GPL-2.0-only"
description = "Append-only on-disk storage with integrity checks and indexing support."
repository = "https://github.com/facebookexperimental/eden"

[dependencies]
byteorder = "1.2.7"
fs2 = "0.4.3"
hex = "0.4"
libc = "0.2"
memmap = "0.7.0"
minibytes = { package = "esl01-minibytes", version = "0.1", path = "../minibytes" }
once_cell = "1"
rand = "0.7"
tempfile = "3.0.7"
tracing = "0.1"
twox-hash = "1"
vlqencoding = { package = "esl01-vlqencoding", version = "0.1", path = "../vlqencoding" }

[dev-dependencies]
quickcheck = "0.9"
rand_chacha = "0.2"