[package]
name = "esl01-indexedlog"
version = "0.3.0"
edition = "2021"
authors = ["Facebook Source Control Team <sourcecontrol-dev@fb.com>"]
license = "MIT"
description = "Append-only on-disk storage with integrity checks and indexing support."
repository = "https://github.com/facebook/sapling"

[lib]
name = "indexedlog"

[dependencies]
atomicfile = { version = "0.3", package = "esl01-atomicfile", path = "../atomicfile" }
byteorder = "1"
fs2 = "0.4"
hex = "0.4"
libc = "0.2"
memmap = "0.7"
minibytes = { version = "0.3", package = "esl01-minibytes", path = "../minibytes" }
once_cell = "1"
rand = "0.8"
tempfile = "3"
tracing = "0.1"
twox-hash = "1"
vlqencoding = { version = "0.3", package = "esl01-vlqencoding", path = "../vlqencoding" }

[dev-dependencies]
dev_logger = { version = "0.3", package = "esl01-dev-logger", path = "../dev-logger" }
quickcheck = "1"
rand_chacha = "0.3"
