[package]
name = "esl01-mincode"
version = "0.0.1"
authors = ["David Tolnay <dtolnay@gmail.com>", "Facebook Source Control Team <sourcecontrol-dev@fb.com>"]
edition = "2018"
license = "GPL-2.0-only"
include = ["Cargo.toml", "src/**/*.rs"]
description = "Bincode-like serialization with VLQ encoded integers."
repository = "https://github.com/facebookexperimental/eden"

[dependencies]
byteorder = "1.0"
serde = "1.0"
vlqencoding = { package = "esl01-vlqencoding", version = "0.1", path = "../vlqencoding" }

[dev-dependencies]
quickcheck = "0.9"
serde = { version = "1.0", features = ["derive"] }
