[package]
name = "esl01-mincode"
version = "0.3.0"
authors = ["David Tolnay <dtolnay@gmail.com>", "Facebook Source Control Team <sourcecontrol-dev@fb.com>"]
edition = "2021"
description = "Bincode-like serialization with VLQ encoded integers."
license = "MIT"
include = ["Cargo.toml", "src/**/*.rs"]
repository = "https://github.com/facebook/sapling"

[lib]
name = "mincode"

[dependencies]
byteorder = "1"
serde = { version = "1", features = ["derive"] }
vlqencoding = { version = "0.3", package = "esl01-vlqencoding", path = "../vlqencoding" }

[dev-dependencies]
quickcheck = "1"
