[package]
name = "esl01-renderdag"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Render a graph into ASCII or Unicode text."
repository = "https://github.com/facebook/sapling"

[lib]
name = "renderdag"

[dependencies]
bitflags = "1"
itertools = "0.10"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
dag = { version = "0.3", package = "esl01-dag", path = "../dag", default-features = false }
nonblocking = { version = "0.3", package = "esl01-nonblocking", path = "../nonblocking" }
unicode-width = "0.1"

[features]
default = []
serialize = ["serde"]
